logs/logtrails.log
Listing '.'...
Listing './bin'...
Compiling './bin/dill_unpickle.py'...
Compiling './bin/get_objgraph.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/dill'...
Listing './lib/python3.5/site-packages/dill-0.2.7.1.egg-info'...
Listing './lib/python3.5/site-packages/logtrails'...
Compiling './lib/python3.5/site-packages/logtrails/config.py'...
***   File "./lib/python3.5/site-packages/logtrails/config.py", line 118
    print 'WARNING: {0} {1} invalid regexp pattern {2}: {3}'.format(self.parser, name, pattern, e)
                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/logtrails-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/multiprocess'...
Listing './lib/python3.5/site-packages/multiprocess/dummy'...
Listing './lib/python3.5/site-packages/multiprocess-0.70.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/systematic'...
Listing './lib/python3.5/site-packages/systematic/filesystems'...
Listing './lib/python3.5/site-packages/systematic/filesystems/zfs'...
Listing './lib/python3.5/site-packages/systematic/logformats'...
Listing './lib/python3.5/site-packages/systematic/platform'...
Listing './lib/python3.5/site-packages/systematic/platform/bsd'...
Listing './lib/python3.5/site-packages/systematic/platform/darwin'...
Listing './lib/python3.5/site-packages/systematic/platform/linux'...
Listing './lib/python3.5/site-packages/systematic/stats'...
Listing './lib/python3.5/site-packages/systematic/stats/filesystems'...
Listing './lib/python3.5/site-packages/systematic/stats/hardware'...
Listing './lib/python3.5/site-packages/systematic/stats/network'...
Listing './lib/python3.5/site-packages/systematic/stats/services'...
Listing './lib/python3.5/site-packages/systematic/stats/system'...
Listing './lib/python3.5/site-packages/systematic-4.7.19.egg-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/filesystems'...
Listing './lib/python3.5/site-packages/test/stats'...
Listing './lib/python3.5/site-packages/test/stats/hardware'...
Listing './share'...
Listing './share/python-wheels'...
